syntax = "proto3";
package core;
option go_package = "./pb";

message Empty {}

message Count {
    uint64 count = 1;
}

message Pager {
    int32 page = 1;
    int32 offset = 2;
}

message DateRange {
    string from = 1;
    string to = 2;
}